--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<a href="https://sudhi-designs.github.io/polkaudio/" target="_blank"><img class="image img-fluid" src="images/proj01.jpg" alt=""></a>
+								<a href="https://sudhi-designs.github.io/polkaudio/" target="_blank"><img class="image img-fluid" src="images/proj01.JPG" alt=""></a>
 							</div>
 					
 						</div>
@@ -113,7 +113,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<a href="https://sudhi-designs.github.io/microsoft.in/" target="_blank"><img class="image img-fluid" src="images/proj02.jpg" alt=""></a>
+								<a href="https://sudhi-designs.github.io/microsoft.in/" target="_blank"><img class="image img-fluid" src="images/proj02.JPG" alt=""></a>
 							</div>
 							
 
