--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> February 2010 -2012</span>
-						<h3>Graphic Designer</h3>
+						<h3>Web Designer</h3>
 
 						<span class="school">Vanilla Networks Pvt Ltd</span>
 					</div>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> April 2013 - 2014</span>
-						<h3>Graphic Designer</h3>
+						<h3>Web Designer</h3>
 						<span class="school">Vyga Animations</span>
 					</div>
 
